link preview and sign

--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
   <meta charset="UTF-8">
 
-  <link href="http://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
+  <link rel='stylesheet' href="https://fonts.googleapis.com/css?family=Roboto">
   <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
   <link rel="stylesheet" href="styles.css">
   <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Python, Machine Learning and Love." />
+  <meta property="og:title" content="Color Palette Generator" />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://dalejan.github.io/colorsPalette/" />
+  <meta property="og:image" content="https://dalejan.github.io/colorsPalette/thumbnail.jpg" />
+  <meta property="og:description" content="Python, Machine Learning and Love." />
+  <meta name="og:locale" content="en_US" />
 
   <py-env>
     - numpy
@@ -48,6 +58,21 @@
   </div>
 
   <div id="palette-container"></div>
-</body>
+
+  <footer >
+    <p id="sign">
+      Built with 
+      <span role="img" aria-label="heart emoji">
+        &#128150;
+      </span>
+      by David Quiñonez
+    </p>
+    <div id="socialNetworks">
+      <a href="https://www.linkedin.com/in/dalejan/">
+        Li
+      </a>
+      <a href="https://github.com/Dalejan/colorsPalette">Gh</a>
+    </div>
+  </footer></body>
 
 </html>
