Fix preview and styles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:title" content="Color Palette Generator" />
   <meta property="og:type" content="article" />
   <meta property="og:url" content="https://dalejan.github.io/colorsPalette/" />
-  <meta property="og:image" content="https://dalejan.github.io/colorsPalette/thumbnail.jpg" />
+  <meta property="og:image" content="https://dalejan.github.io/colorsPalette/thumbnail.JPG" />
   <meta property="og:description" content="Python, Machine Learning and Love." />
   <meta name="og:locale" content="en_US" />
 
